<resources>
    <string name="app_name">萌宠尾巴</string>
    <string name="tourists">游客</string>
    <string name="login">登录</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_page_prompt">手机号首次登陆将自动注册</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_86">+86</string>
    <string name="prompt_et_phone">输入手机号</string>
    <string name="v_code">验证码</string>
    <string name="prompt_et_vcode">输入验证码</string>
    <string name="get_vcode">获取验证码</string>
    <string name="prompt_error_vcode">验证码错误</string>
    <string name="use_password">用密码登录</string>
    <string name="not_get_vcode">收不到验证码?</string>
    <string name="password">密码</string>
    <string name="prompt_password">6-16位数字和字母组合</string>
    <string name="prompt_error_password">手机号或密码错误</string>
    <string name="use_vcode">用验证码登陆</string>
    <string name="forget_password">忘记密码</string>
</resources>
