<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/qb_px_110"
    android:paddingRight="@dimen/qb_px_110"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.PhoneLoginFragment">

    <LinearLayout
        android:id="@+id/user_name_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_login_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="@dimen/qb_px_180"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/_86"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/qb_px_40" />

        <EditText
            android:id="@+id/user_phone_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_130"
            android:background="@null"
            android:hint="@string/prompt_et_phone"
            android:inputType="phone"
            android:lines="1"
            android:maxLength="11"
            android:textSize="@dimen/qb_px_40" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/user_password_lt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_50"
        android:background="@drawable/et_login_bg"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name_lt">

        <TextView
            android:layout_width="@dimen/qb_px_180"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/v_code"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/qb_px_40" />

        <EditText
            android:id="@+id/v_code_et"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="@dimen/qb_px_130"
            android:background="@null"
            android:hint="@string/prompt_et_vcode"
            android:inputType="number"
            android:lines="1"
            android:maxLength="16"
            android:textSize="@dimen/qb_px_40" />

        <TextView
            android:id="@+id/get_vcode_bt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#afafaf"
            android:enabled="false"
            android:gravity="center_vertical"
            android:textSize="@dimen/qb_px_40"
            android:text="@string/get_vcode"/>
    </LinearLayout>

    <TextView
        android:id="@+id/error_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/prompt_error_vcode"
        android:textSize="@dimen/qb_px_35"
        android:visibility="invisible"
        android:textColor="@color/colorErrorRed"
        app:layout_constraintBottom_toTopOf="@+id/login_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password_lt" />

    <Button
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_130"
        android:layout_marginTop="@dimen/qb_px_100"
        android:background="@drawable/selector_login_bt"
        android:enabled="false"
        android:text="@string/login"
        android:textColor="#afafaf"
        android:textSize="@dimen/qb_px_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_password_lt" />

    <TextView
        android:id="@+id/toggle_password_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_50"
        android:text="@string/use_password"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/qb_px_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bt" />

    <TextView
        android:id="@+id/not_received_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/qb_px_50"
        android:text="@string/not_get_vcode"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/qb_px_40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_bt" />

</androidx.constraintlayout.widget.ConstraintLayout>